# coinance

./: README.md
bitrace_backend/: .gitignore  README.md  manage.py  pyproject.toml
bitrace_backend/bitrace_backend/: asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
bitrace_backend/bitrace_backend/settings/: base.py
bitrace_backend/core/dataclasses/: ticker_data.py
bitrace_backend/core/management/commands/: poloniex_ws_client.py
bitrace_backend/currency/: routing.py  urls.py
bitrace_backend/currency/admin/: __init__.py  candle_chart.py  currency.py
bitrace_backend/currency/migrations/: 0002_candlechart.py  0003_delete_candlechart.py
bitrace_backend/currency/models/: __init__.py  candle_chart.py  currency.py  currency_pair.py  exchange_rate.py
bitrace_backend/currency/serializers/: currency.py  currency_pair.py  exchange_rate.py
bitrace_backend/currency/tasks/: __init__.py  candle_chart.py  exchange_rate.py
bitrace_backend/currency/views/: candle_chart.py  currency_pair.py
bitrace_backend/exchange/: admin.py
bitrace_backend/exchange/migrations/: 0001_initial.py
bitrace_backend/exchange/models/: __init__.py  currency_info.py  exchange_rate.py
bitrace_backend/exchange/schemas/: __init__.py  currency_info.py
bitrace_backend/poloniex/: apps.py
bitrace_backend/poloniex/apis/: __init__.py  candle_chart.py  chart_data.py
bitrace_backend/poloniex/dataclasses/: chart_data.py
bitrace_backend/trade/models/: transaction.py
bitrace_backend/user/: serializers.py  urls.py  views.py
bitrace_backend/utils/: exceptions.py
(+204 files in other folders)
