[tool.poetry]
name = "bitrace_backend"
version = "0.1.0"
description = ""
authors = ["Dongho Yu <n0rr7882@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
django-filter = "^2.2.0"
djangorestframework = "^3.11.0"
markdown = "^3.2.1"
djangorestframework-simplejwt = "^4.4.0"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
pylint = "^2.4.4"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
